Autoconf version 2.  Some configure.in files need minor adjustments to
work with it; the documentation has a chapter on upgrading.  A few
configure.in files, including those for GNU Emacs and the GNU C
Library, need major changes because they relied on undocumented
internals of version 1.  Future releases of those packages will have
updated configure.in files.

Major changes in release 2.0:

** New macros:
* AC_CACHE_VAL to share results of tests between configure runs.
* AC_DEFUN to define macros, automatically AC_PROVIDE them, and ensure
  that macros invoked with AC_REQUIRE don't interrupt other macros.
* AC_CONFIG_AUX_DIR, AC_CANONICAL_SYSTEM, AC_CANONICAL_HOST, AC_LINK_FILES to
  support deciding unguessable features based on the host and target types.
* AC_CONFIG_SUBDIRS to recursively configure a source tree.
* AC_ARG_PROGRAM, which uses the options --program-prefix,
  --program-suffix, and --program-transform-name to change the names
  of programs being installed.
* AC_CHECK_TYPE, which checks whether sys/types.h defines a given type.
* AC_CHECK_LIB, which checks for a particular function in a library.
* AC_MSG_CHECKING and AC_MSG_RESULT to print test results, on a single line,
  whether or not the test succeeds.  They obsolete AC_CHECKING and AC_VERBOSE.
* AC_SUBST_FILE, to insert one file into another.
* AC_FUNC_MEMCMP, to check whether memcmp is 8-bit clean.
* AC_FUNC_STRFTIME, to find strftime even if it's in -lintl.
* AC_FUNC_GETMNTENT, to find getmntent even if it's in -lsun or -lseq.

** Changed macros:
* Many macros renamed systematically, but old names are accepted for
  backward compatibility.
* AC_OUTPUT adds the "automatically generated" comment to
  non-Makefiles where it finds @configure_input@ in an input file, to
  support files with various comment syntaxes.
* AC_OUTPUT does not replace "prefix" and "exec_prefix" in generated
  files when they are not enclosed in @ signs.
* AC_OUTPUT allows the optional environment variable CONFIG_STATUS to