@@ -31,6 +31,10 @@ Things it might be nice to do someday:
 
 ------------------------------------------------------------------------------
 
+* Make autoconf diagnose giving too few or too many arguments to macros.
+
+------------------------------------------------------------------------------
+
 * Split up AC_SUBST substitutions using a loop to accomodate shells
   with severely limited here document sizes, if it turns out to be a problem.
   I'm not sure whether the limit is on lines or bytes; if bytes, it
