@@ -10,6 +10,10 @@ Library, need major changes because they relied on undocumented
 internals of version 1.  Future releases of those packages will have
 updated configure.in files.
 
+It's best to use GNU m4 1.3 (or later) with Autoconf version 2.
+Autoconf now makes heavy use of m4 diversions, which were implemented
+inefficiently in GNU m4 releases before 1.3.
+
 Major changes in release 2.0:
 
 ** New macros:
